Update slightly; add spec file

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -1,4 +1,5 @@
-.TH RANPWD 1L "Nifty utility" "Linux" \" -*- nroff -*-
+.\" $Id$
+.TH RANPWD 1 "17 Mar 2003" "H. Peter Anvin"
 .SH NAME
 ranpwd \- generate random passwords
 .SH SYNOPSIS
