Add support for generating UUID/GUIDs

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -74,6 +74,12 @@ octets.
 .IP
 .I "\-M", "\-\-mac-address \-\-upper"
 Generate an upper case MAC address.
+.IP
+.I "\-g", "\-\-uuid", "\-\-guid"
+Generate a random Universally Unique Identifier (UUID).
+.IP
+.I "\-g", "\-\-uuid \-\-upper", "\-\-guid \-\-upper"
+Generate an upper case random Universally Unique Identifier (UUID).
 .TP
 .I "\-s", "\-\-secure"
 On systems which have
