Document "ranpwd -m 8" for generating an EUI-64
An EUI-64 is just like a MAC(-48) address, just longer...

Signed-off-by: H. Peter Anvin <hpa@zytor.com>

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -71,12 +71,14 @@ octets; the default is two octets.
 \fB\-m\fR, \fB\-\-mac-address\fR
 Generate a random MAC address.  The first octet must have the
 multicast bit clear, and the local bit set.  Length is given in
-octets; the default is six octets.
+octets; the default is six octets (MAC-48.)  Specify a length of 8 to
+generate an EUI-64.
 .TP
 \fB\-M\fR, \fB\-\-mac-address \-\-upper\fR
-Generate an upper case random MAC address.  The first octet must have the
-multicast bit clear, and the local bit set.  Length is given in
-octets; the default is six octets.
+Generate an upper case random MAC address.  The first octet must have
+the multicast bit clear, and the local bit set.  Length is given in
+octets; the default is six octets (MAC-48.)  Specify a length of 8 to
+generate an EUI-64.
 .TP
 \fB\-g\fR, \fB\-\-uuid\fR, \fB\-\-guid\fR
 Generate a random Universally Unique Identifier (UUID).  Length is
