ranpwd.1: Use logical parenthesis style throughout
Use either standard or logical parenthesis style, not both...

Signed-off-by: H. Peter Anvin <hpa@zytor.com>

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -60,7 +60,7 @@ Generate decimal numbers.
 Generate octal numbers.
 .TP
 \fB\-b\fP, \fB\-\-binary\fP
-Generate a bit string (for Bynar sabotage teams.)
+Generate a bit string (for Bynar sabotage teams).
 .TP
 \fB\-i\fP, \fB\-\-ip\fP
 Generate a random IP suffix (normally used with a
@@ -71,13 +71,13 @@ octets; the default is two octets.
 \fB\-m\fP, \fB\-\-mac-address\fP
 Generate a random MAC address.  The first octet must have the
 multicast bit clear, and the local bit set.  Length is given in
-octets; the default is six octets (MAC-48.)  Specify a length of 8 to
+octets; the default is six octets (MAC-48).  Specify a length of 8 to
 generate an EUI-64.
 .TP
 \fB\-M\fP, \fB\-\-mac-address \-\-upper\fP
 Generate an upper case random MAC address.  The first octet must have
 the multicast bit clear, and the local bit set.  Length is given in
-octets; the default is six octets (MAC-48.)  Specify a length of 8 to
+octets; the default is six octets (MAC-48).  Specify a length of 8 to
 generate an EUI-64.
 .TP
 \fB\-g\fP, \fB\-\-uuid\fP, \fB\-\-guid\fP
