ranpwd.1: Not just Linux has /dev/[u]random
Signed-off-by: H. Peter Anvin <hpa@zytor.com>

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -17,9 +17,9 @@ ranpwd \- generate random passwords
 [options] [length]
 .SH DESCRIPTION
 .B ranpwd
-generates random passwords.  On Linux, it will use the kernel-based
-true random number generator to generate cryptographically secure
-passwords.
+generates random passwords.  On Linux or most other newer Unix systems
+it will use the kernel-based true random number generator to generate
+cryptographically secure passwords.
 .PP
 If
 .I length
