ranpwd.1: Fix -G option documentation, update date
Fix documentation of -G, update date.

Signed-off-by: H. Peter Anvin <hpa@zytor.com>

--- a/ranpwd.1
+++ b/ranpwd.1
@@ -1,6 +1,6 @@
 .\" -----------------------------------------------------------------------
 .\"   
-.\"   Copyright 1994-2008 H. Peter Anvin - All Rights Reserved
+.\"   Copyright 1994-2012 H. Peter Anvin - All Rights Reserved
 .\"
 .\"   This program is free software; you can redistribute it and/or modify
 .\"   it under the terms of the GNU General Public License as published by
@@ -9,7 +9,7 @@
 .\"   (at your option) any later version; incorporated herein by reference.
 .\"
 .\" -----------------------------------------------------------------------
-.TH RANPWD 1 "28 June 2008" "H. Peter Anvin"
+.TH RANPWD 1 "26 January 2012" "H. Peter Anvin"
 .SH NAME
 ranpwd \- generate random passwords
 .SH SYNOPSIS
@@ -84,7 +84,7 @@ generate an EUI-64.
 Generate a random Universally Unique Identifier (UUID).  Length is
 given in the number of UUIDs to output; the default is one UUID.
 .TP
-\fB\-g\fP, \fB\-\-uuid \-\-upper\fP, \fB\-\-guid \-\-upper\fP
+\fB\-G\fP, \fB\-\-uuid \-\-upper\fP, \fB\-\-guid \-\-upper\fP
 Generate an upper case random Universally Unique Identifier (UUID).
 Length is given in the number of UUIDs to output; the default is one
 UUID.
